# OpenBattlePredictorAI

./: .pylintrc  CODE_OF_CONDUCT.md  README.md  battles.csv  pyproject.toml
.github/workflows/: python-app.yml
data/: real_napoleon_battles.csv
results/: battles_with_clusters.csv
scripts/: classification.py  clustering.py
src/: battle_classifier.py  battle_clustering.py  battle_predict.py  x.py
tests/: conftest.py  test_cluster.py
