[tool.poetry]
name = "supervised-learning"
version = "0.1.0"
description = ""
authors = ["Gareth Murphy <16783958+garethcmurphy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
numpy = "^2.2.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
black = "^24.10.0"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
